--- a/client/src/screens/Profile/Profile.css
+++ b/client/src/screens/Profile/Profile.css
@@ -8,10 +8,12 @@
   justify-content: center;
   align-items: center;
   font-size: 24px;
+  box-shadow: 0 0 15px var(--tone10);
 }
 
 .profile-image {
   height: 295px;
+  border-radius: 50%;
 }
 
 .profile-info {
