addeed projects, users, and tickets fields to projects, users, and tickets, SO USEFUL

--- a/client/src/screens/Notifications/Notifications.css
+++ b/client/src/screens/Notifications/Notifications.css
@@ -25,3 +25,15 @@
 .notifications-spacer {
   height: 50px;
 }
+
+.e-p-name {
+  width: 220px;
+}
+
+.e-description {
+  width: 800px;
+}
+
+.e-created {
+  width: 220px;
+}
