--- a/client/src/screens/ProjectDetails/ProjectDetails.css
+++ b/client/src/screens/ProjectDetails/ProjectDetails.css
@@ -1,104 +1,4 @@
 .project-bottom-details {
-  position: relative;
-}
-
-.project-bottom-details {
-  display: flex;
-  flex-direction: row;
-  margin-top: 10px;
-  padding-top: 30px;
-}
-
-
-.ass-tickets {
-  width: 100%;
-}
-
-.ass-users-header {
-  background: var(--tone9);
-  height: 70px;
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  color: var(--tone1);
-  font-size: 22px;
-  font-weight: 600;
-  padding-left: 40px;
-}
-
-.ass-tickets-header {
-  background: var(--tone9);
-  height: 70px;
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  color: var(--tone1);
-  font-size: 22px;
-  font-weight: 600;
-  padding-left: 40px;
-}
-
-.project-detail-container {
-  width: 72vw;
-  background: var(--tone1);
-  padding: 20px 35px 35px 35px;
-  position: relative;
-}
-
-.c-severity {
-  width: 110px;
-}
-
-.c-name {
-  width: 180px;
-}
-
-.c-p-name {
-  width: 220px;
-}
-
-.c-assigned {
-  width: 170px;
-}
-
-.c-type {
-  width: 150px;
-}
-
-.c-status {
-  width: 90px;
-}
-
-.c-created {
-  width: 230px;
-}
-.project-desciptors {
-  margin: 85px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-
-.project-bottom-details {
   border-top: 2px solid var(--tone5);
   position: relative;
 }
@@ -115,11 +15,22 @@
   margin-right: 20px;
 }
 
+.ass-user-ticket-line {
+  margin-left: 13px;
+  font-size: 18px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--tone7);
+}
+
 .ass-divider {
   height: 100%;
   border: 1px solid var(--tone5);
   position: absolute;
-  left: 410px;
+  left: 455px;
   top: 0px;
 }
 
@@ -161,8 +72,30 @@
   position: relative;
 }
 
+.ass-user-ticket-labels {
+  border-bottom: 3px solid var(--tone7);
+  padding-bottom: 2px;
+  font-weight: 600;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 13px;
+}
+
+.d-user {
+  width: 100px;
+}
+
+.d-email {
+  width: 220px;
+}
+
+.d-role {
+  width: 160px;
+}
+
 .c-severity {
-  width: 110px;
+  width: 100px;
 }
 
 .c-name {
@@ -174,7 +107,7 @@
 }
 
 .c-assigned {
-  width: 170px;
+  width: 150px;
 }
 
 .c-type {
@@ -186,8 +119,8 @@
 }
 
 .c-created {
-  width: 230px;
+  width: 200px;
 }
 .project-desciptors {
   margin: 85px;
-} */
+}
